@@ -37,14 +37,10 @@ Preferences::Preferences ()
 	workoffline_ = confclient_->get_entry (CONF_PATH "/workoffline");
 	uselistview_ = confclient_->get_entry (CONF_PATH "/uselistview");
 	showtagpane_ = confclient_->get_entry (CONF_PATH "/showtagpane");
-	doilaunch_ = confclient_->get_entry (CONF_PATH "/doilaunch");
-	metadatalookup_ = confclient_->get_entry (CONF_PATH "/metadatalookup");
+	crossRefUsername_ = confclient_->get_entry (CONF_PATH "/crossrefusername");
+	crossRefPassword_ = confclient_->get_entry (CONF_PATH "/crossrefpassword");
 	width_ = confclient_->get_entry (CONF_PATH "/width");
 	height_ = confclient_->get_entry (CONF_PATH "/height");
-
-	doilaunchdefault_ = "http://dx.doi.org/<!DOI!>";
-	metadatalookupdefault_ =
-		"http://www.crossref.org/openurl/?id=doi:<!DOI!>&noredirect=true";
 
 	proxymode_ = confclient_->get_entry (PROXY_MODE_KEY);
 	proxyuseproxy_ = confclient_->get_entry (USE_PROXY_KEY);
@@ -62,8 +58,6 @@ Preferences::Preferences ()
 		setShowTagPane (true);
 		setUseListView (false);
 		setWorkOffline (false);
-		setDoiLaunch (doilaunchdefault_);
-		setMetadataLookup (metadatalookupdefault_);
 		setWindowSize (std::pair<int,int>(700,500));
 		firsttime_ = true;
 	} else {
@@ -95,16 +89,12 @@ Preferences::Preferences ()
 
 	dialog_ = (Gtk::Dialog *) xml_->get_widget ("Preferences");
 
-	doilaunchentry_ = (Gtk::Entry *) xml_->get_widget ("DoiLaunch");
-	metadatalookupentry_ = (Gtk::Entry *) xml_->get_widget ("MetadataLookup");
-	doilaunchentry_->signal_changed().connect (
-		sigc::mem_fun (*this, &Preferences::onURLChanged));
-	metadatalookupentry_->signal_changed().connect (
-		sigc::mem_fun (*this, &Preferences::onURLChanged));
-
-	Gtk::Button *button = (Gtk::Button *) xml_->get_widget ("ResetToDefaults");
-	button->signal_clicked().connect (
-		sigc::mem_fun (*this, &Preferences::onResetToDefaults));
+	crossRefUsernameEntry_ = (Gtk::Entry *) xml_->get_widget ("CrossRefUsername");
+	crossRefPasswordEntry_ = (Gtk::Entry *) xml_->get_widget ("CrossRefPassword");
+	crossRefUsernameEntry_->signal_changed().connect (
+		sigc::mem_fun (*this, &Preferences::onCrossRefChanged));
+	crossRefPasswordEntry_->signal_changed().connect (
+		sigc::mem_fun (*this, &Preferences::onCrossRefChanged));
 
 	xml_->get_widget ("ProxyHost", proxyhostentry_);
 	xml_->get_widget ("ProxyPort", proxyportspin_);
@@ -126,8 +116,6 @@ Preferences::Preferences ()
 	useauthcheck_->signal_toggled().connect (
 		sigc::mem_fun (*this, &Preferences::onProxyChanged));
 
-	
-	
 	/*
 	 * Plugins
 	 */
@@ -256,12 +244,12 @@ void Preferences::onConfChange (int number, Gnome::Conf::Entry entry)
 	} else if (key == CONF_PATH "/showtagpane") {
 		showtagpanesignal_.emit ();
 
-	// Web Service settings
-	} else if (key == CONF_PATH "/doilaunch") {
-		doilaunchentry_->set_text (
+	// CrossRef plugin settings
+	} else if (key == CONF_PATH "/crossrefusername") {
+		crossRefUsernameEntry_->set_text (
 			entry.get_value ().get_string ());
-	} else if (key == CONF_PATH "/metadatalookup") {
-		metadatalookupentry_->set_text (
+	} else if (key == CONF_PATH "/crossrefpassword") {
+		crossRefPasswordEntry_->set_text (
 			entry.get_value ().get_string ());
 
 	// Proxy settings
@@ -304,10 +292,15 @@ void Preferences::showDialog ()
 {
 	ignorechanges_ = true;
 
-	doilaunchentry_->set_text (
-		confclient_->get_string (doilaunch_.get_key()));
-	metadatalookupentry_->set_text (
-		confclient_->get_string (metadatalookup_.get_key()));
+	/*
+	 * Plugin stuff was populated at construction time
+	 * and should remain in a consistent state thereafter
+	 */
+
+	crossRefUsernameEntry_->set_text (
+		confclient_->get_string (crossRefUsername_.get_key()));
+	crossRefPasswordEntry_->set_text (
+		confclient_->get_string (crossRefPassword_.get_key()));
 
 	proxyhostentry_->set_text (
 		confclient_->get_string (HTTP_PROXY_HOST_KEY));
@@ -333,24 +326,12 @@ void Preferences::showDialog ()
 
 using Utility::DOIURLValid;
 
-void Preferences::onURLChanged ()
+void Preferences::onCrossRefChanged ()
 {
 	if (ignorechanges_) return;
 
-	// Should we be telling gconf to ignore us for a minute, since
-	// these operations cause a useless callback to onConfChange?
-
-	// Silently don't remember bad settings for now -- should prompt the
-	// user when the dialog closes if they still haven't entered something valid
-	if (DOIURLValid (doilaunchentry_->get_text ())) {
-		confclient_->set (
-			doilaunch_.get_key(), doilaunchentry_->get_text ());
-	}
-
-	if (DOIURLValid (metadatalookupentry_->get_text ())) {
-		confclient_->set (
-			metadatalookup_.get_key(), metadatalookupentry_->get_text ());
-	}
+	confclient_->set (crossRefUsername_.get_key(), crossRefUsernameEntry_->get_text());
+	confclient_->set (crossRefPassword_.get_key(), crossRefPasswordEntry_->get_text());
 }
 
 
@@ -395,14 +376,6 @@ void Preferences::onProxyChanged ()
 	}
 
 	updateSensitivity ();
-}
-
-
-// This is just for the button in the dialog!
-void Preferences::onResetToDefaults ()
-{
-	doilaunchentry_->set_text (doilaunchdefault_);
-	metadatalookupentry_->set_text (metadatalookupdefault_);
 }
 
 
@@ -472,34 +445,15 @@ sigc::signal<void>& Preferences::getShowTagPaneSignal ()
 }
 
 
-using Utility::StringPair;
-using Utility::twoWaySplit;
-
-StringPair Preferences::getDoiLaunch ()
+Glib::ustring Preferences::getCrossRefUsername ()
 {
-	return twoWaySplit (
-		confclient_->get_string (doilaunch_.get_key()),
-		"<!DOI!>");
+	return confclient_->get_string (crossRefUsername_.get_key());
 }
 
 
-void Preferences::setDoiLaunch (Glib::ustring const &doilaunch)
+Glib::ustring Preferences::getCrossRefPassword ()
 {
-	confclient_->set (doilaunch_.get_key(), doilaunch);
-}
-
-
-StringPair Preferences::getMetadataLookup ()
-{
-	return twoWaySplit (
-		confclient_->get_string (metadatalookup_.get_key()),
-		"<!DOI!>");
-}
-
-
-void Preferences::setMetadataLookup (Glib::ustring const &metadatalookup)
-{
-	confclient_->set (metadatalookup_.get_key(), metadatalookup);
+	return confclient_->get_string (crossRefPassword_.get_key());
 }
 
 
